--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
 body{
   background: black;
   color: white;
+  font-family: 'courier new', monospace;
   height: auto;
 }
+
+.terminal {
+  border: 1px solid #333;
+  width: 80%;
+  margin: 50px auto;
+  border-radius: 8px;
+}
+.top-bar {
+  background: #333;
+  padding: 10px;
+  border-radius: 8px 8px 0 0;
+}
+
+.dot {
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  display: inline block;
+  margin-right: 5px;
+}
+
+.red
