--- a/style.css
+++ b/style.css
@@ -25,4 +25,14 @@ body{
   margin-right: 5px;
 }
 
-.red
+.red {
+  background: red;
+}
+
+.green {
+  background: green;
+}
+
+.yellow {
+  background: yellow;
+}
