--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-  background: black;
-  color: white;
+  background: lalala;
+  color: 00ff00;
   font-family: 'courier new', monospace;
   height: auto;
 }
